fortify scan fix